--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "jeong-jihwan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.6.1"
   },
